gen/cloudtasks/v2beta2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudtasks2_beta2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudtasks/v2beta2/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:4487:50
     |
4487 |                     response_view: Option<crate::tasks::params::GetResponseView>,
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:4504:39
     |
4504 |                         value: crate::tasks::params::GetResponseView,
     |                                       ^^^^^
     |                                       |
     |                                       unresolved import
     |                                       help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:4763:50
     |
4763 |                     response_view: Option<crate::tasks::params::ListResponseView>,
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:4790:39
     |
4790 |                         value: crate::tasks::params::ListResponseView,
     |                                       ^^^^^
     |                                       |
     |                                       unresolved import
     |                                       help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:1445:13
     |
1445 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `queues::QueuesActions`
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:1498:17
     |
1498 |                 queues::QueuesActions
     |                 ^^^^^^^^^^^^^^^^^^^^^ did you mean `queues::QueuesActions { /* fields */ }`?

error[E0423]: expected value, found struct `tasks::TasksActions`
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:2121:21
     |
2121 |                     tasks::TasksActions
     |                     ^^^^^^^^^^^^^^^^^^^ did you mean `tasks::TasksActions { /* fields */ }`?

warning: unreachable expression
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:3692:29
     |
3692 | /                             Ok(match value {
3693 | |                                 _ => {
3694 | |                                     return Err(::serde::de::Error::custom(format!(
3695 | |                                         "invalid enum for #name: {}",
...    |
3698 | |                                 }
3699 | |                             })
     | |______________________________^
     |
     = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/cloudtasks/v2beta2/lib/src/lib.rs:3728:29
     |
3728 | /                             Ok(match value {
3729 | |                                 _ => {
3730 | |                                     return Err(::serde::de::Error::custom(format!(
3731 | |                                         "invalid enum for #name: {}",
...    |
3734 | |                                 }
3735 | |                             })
     | |______________________________^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-cloudtasks2_beta2`.

To learn more, run the command again with --verbose.
